feat: add logout function

--- a/packages/fb-login/template/user.ejs
+++ b/packages/fb-login/template/user.ejs
@@ -3,5 +3,6 @@
 <head></head>
 <body>
   userId: <%= userId%>
+  <button onclick="location.href='https://localhost:3000/auth/logout'">logout</button>
 </body>
 </html>
