--- a/packages/fb-login/template/index.ejs
+++ b/packages/fb-login/template/index.ejs
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <button onclick="location.href='<%= fbDialogURL %>'">Facebook</button>
+  <button onclick="location.href='<%= fbDialogURL %>'">Facebook Login</button>
 </body>
 
 </html>
