--- a/packages/fb-login/template/user.ejs
+++ b/packages/fb-login/template/user.ejs
@@ -2,7 +2,12 @@
 <html>
 <head></head>
 <body>
-  userId: <%= userId%>
-  <button onclick="location.href='https://localhost:3000/auth/logout'">logout</button>
+  <p>userId: <%= id%></p>
+  <p>name: <%= name%></p>
+  <form action="/auth/logout" method="post">
+    <button type="submit" >Logout</button>
+  </form>
+  <a href="/user/me">me</a>
+  <a href="<%=`/user/${id}`%>">user</a>
 </body>
 </html>
